Update final notebook version

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,6 +17,26 @@
   },
   "cells": [
     {
+      "cell_type": "code",
+      "source": [
+        "import copy\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from sklearn.metrics import precision_score, recall_score, f1_score\n"
+      ],
+      "metadata": {
+        "id": "R6VzM7cPDoce"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#  EDA - Part A: Feature Correlation & Impact Analysis\n",
@@ -34,10 +54,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
         "\n",
         "# Configuration\n",
         "BASIN_FILES = ['il_48125.csv', 'il_48130.csv', 'il_55106.csv']\n",
@@ -153,7 +169,7 @@
         "id": "bhd6r5OFdb2B",
         "outputId": "92153c7c-4fed-4baa-d4ec-36a21df72d42"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,11 +252,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import os\n",
+        "\n",
         "\n",
         "# ==========================================\n",
         "# 1. CONFIGURATION\n",
@@ -328,7 +340,7 @@
         "id": "rSl3-oyjtWPZ",
         "outputId": "5f3fa2d4-be4f-47ce-c38c-4135af91f0bb"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,13 +382,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
-        "import os\n",
-        "from sklearn.metrics import precision_score, recall_score, f1_score\n",
         "\n",
         "# ==========================================\n",
         "# 1. CONFIGURATION (OPTIMIZATION RUN)\n",
@@ -407,15 +412,6 @@
       ],
       "metadata": {
         "id": "DVpB4cIhhm1J"
-      },
-      "execution_count": 52,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WtRuHnFq0O3p"
       },
       "execution_count": null,
       "outputs": []
@@ -545,7 +541,7 @@
       "metadata": {
         "id": "cUr5O1C6hy39"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +603,7 @@
       "metadata": {
         "id": "0vltshwGjEev"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +612,7 @@
         "# ==========================================\n",
         "# 4. MAIN EXECUTION (TRAIN -> VALIDATE -> TEST)\n",
         "# ==========================================\n",
-        "import copy # Needed to save the best model\n",
+        "\n",
         "\n",
         "# --- CONFIGURATION FOR SPLITS ---\n",
         "TRAIN_END_DATE = '2010-01-01'  # Train until here\n",
@@ -756,7 +752,7 @@
         "id": "DoqIFaFZnwrR",
         "outputId": "15446d39-24c7-48c1-d2db-ab9f3a0edaac"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,14 +825,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "from torch.utils.data import DataLoader\n",
-        "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "\n",
         "# ==========================================\n",
         "# 1. SETUP & COMPARISON FUNCTION\n",
@@ -995,7 +983,7 @@
         "id": "7nbs3OYPpwnW",
         "outputId": "95ce51f7-b5b9-4389-abe1-dd2a40350648"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
